# bachelor-thesis

./: .gitignore  README.md
bachelor-thesis-latex/: abbreviations.aux  abbreviations.tex  bibliography.bib  thesis-master.aux  thesis-master.out  thesis-master.tex  thesis-master.toc
bachelor-thesis-latex/cel-thesis/: cel-thesis.cls  eidesstattliche_erklaerung.aux
bachelor-thesis-latex/chapters/: abstract.aux  abstract.tex  conclusion.aux  conclusion.tex  dab_standard.aux  dab_standard.tex  evaluation.aux  evaluation.tex  implementation.aux  implementation.tex  introduction.aux  introduction.tex  receiver.aux  receiver.tex  synchronization.tex  transceiver_app.aux  transceiver_app.tex  transmitter.aux  transmitter.tex
bachelor-thesis-latex/data/channel_models/: DASB_HT_2.txt  dvb.txt
data/multipath/: README
gr-dab_research/: CMakeLists.txt  MANIFEST.md
gr-dab_research/cmake/Modules/: dab_researchConfig.cmake
gr-dab_research/docs/: README.dab_research
gr-dab_research/docs/doxygen/: Doxyfile.in
gr-dab_research/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-dab_research/grc/: CMakeLists.txt  dab_research_delayed_correlation_cc.xml  dab_research_fic_decode_vc.xml  dab_research_measure_fib_error_rate.xml  dab_research_measure_freq_offset_cf.xml  dab_research_qpsk_demod_vcvb.xml
gr-dab_research/include/dab_research/: CMakeLists.txt  api.h  delayed_correlation_cc.h  firecode_check_bb.h  measure_fib_error_rate.h  measure_freq_offset_cf.h  qpsk_demod_vcvb.h
gr-dab_research/lib/: .firecode_check_bb_impl.cc.swp  CMakeLists.txt  delayed_correlation_cc_impl.cc  delayed_correlation_cc_impl.h  firecode_check_bb_impl.cc  firecode_check_bb_impl.h  measure_fib_error_rate_impl.cc  measure_fib_error_rate_impl.h  measure_freq_offset_cf_impl.cc  measure_freq_offset_cf_impl.h  qa_dab_research.cc  qa_dab_research.h  qpsk_demod_vcvb_impl.cc  qpsk_demod_vcvb_impl.h  test_dab_research.cc
gr-dab_research/python/: CMakeLists.txt  __init__.py  fic_decode_vc.py
gr-dab_research/swig/: CMakeLists.txt  dab_research_swig.i
grc/: channel_models.grc  delayed_correlation.grc  delayed_correlation.py  loopback.grc  sync_demo.grc  sync_hier_block.grc  top_block.py  transmit_file.grc  transmitter_debug.grc  untitled.grc
latex/: abbreviations.tex  thesis-master.tex
latex/cel-thesis/: cel-thesis.cls
latex/chapters/: abstract.tex  introduction.tex  synchronization.tex
latex/sync_flowchart/: synchronization_flowchart.tex
literature/dab_standard/: gr-dab_thesispdf
media/: media_copyright_acknowledgement.md
media/transmitter/: FIC_encoder.xcf
python/: BER.py  BER_physical_channel.py  DAB_channels.py  FIC_error_rate.py  Firecode_error_rate.py  LTE_models.py  frequency_offset_variance.py  measure_Power.py  measure_power_average.py
tikz/: DAB+PER.tex  DAB_ensemble.aux  DAB_ensemble.tex  DAb_overview.tex  MSC.tex  Time_Interleaver.tex  Transmission_Frame.tex  si_functions.tex  tikz_god.tex  vorlage.tex
tikz/cyclic_prefix/: cyclic_prefix.tex
